build: enhance release process and Docker image build
Add steps to convert repository owner to lowercase in release.yml and version-bump.yml workflows for consistent Docker image tagging.

Introduce build date argument in release.yml and echo version information in Dockerfile for improved debugging and traceability.

Update build arguments in release.yml to include VERSION, COMMIT, and BUILD_DATE for better image metadata.

Reorder ldflags in Dockerfile to match the order of VERSION, BUILD_DATE, and COMMIT for consistency.

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -33,6 +33,10 @@ jobs:
           echo "LATEST_TAG=$latest_tag" >> $GITHUB_OUTPUT
           echo "Current version: $latest_tag"
 
+      - name: Set lowercase repository owner
+        id: repository_owner
+        run: echo "OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Bump version
         id: bump_version
         run: |
