--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,18 +61,30 @@ jobs:
         id: get_version
         run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
+      - name: Set lowercase repository owner
+        id: repository_owner
+        run: echo "OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ steps.repository_owner.outputs.OWNER }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get build date
+        id: build_date
+        run: echo "DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
+          build-args: |
+            VERSION=${{ steps.get_version.outputs.VERSION }}
+            COMMIT=${{ github.sha }}
+            BUILD_DATE=${{ steps.build_date.outputs.DATE }}
           tags: |
-            ghcr.io/${{ github.repository_owner }}/noidea:latest
-            ghcr.io/${{ github.repository_owner }}/noidea:${{ steps.get_version.outputs.VERSION }} 
+            ghcr.io/${{ steps.repository_owner.outputs.OWNER }}/noidea:latest
+            ghcr.io/${{ steps.repository_owner.outputs.OWNER }}/noidea:${{ steps.get_version.outputs.VERSION }} 
