--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 
 permissions:
   contents: write
+  packages: write
 
 jobs:
   build-and-release:
@@ -50,6 +51,9 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: build-and-release
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -66,11 +70,22 @@ jobs:
         run: echo "OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
       - name: Login to GitHub Container Registry
+        id: login
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ steps.repository_owner.outputs.OWNER }}
           password: ${{ secrets.GITHUB_TOKEN }}
+        continue-on-error: true
+        
+      # Fallback login with PAT if available and configured
+      - name: Login with PAT
+        if: ${{ always() && steps.login.outcome == 'failure' }}
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ steps.repository_owner.outputs.OWNER }}
+          password: ${{ secrets.CR_PAT }}
 
       - name: Get build date
         id: build_date
