--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,22 +56,38 @@ jobs:
             HIGHLIGHT_COMMITS=$(echo "$COMMITS_FOR_HIGHLIGHTS" | head -5)
           fi
           
-          # Use GitHub CLI to leverage Copilot to enhance the changelog
-          echo "## Key Highlights" > changelog.md
+          # Install GitHub CLI Copilot extension if not already installed
+          gh extension install github/gh-copilot &>/dev/null || true
+          
+          # Start building the changelog file
+          echo "## User-Friendly Overview" > changelog.md
+          echo "" >> changelog.md
+          
+          # Use GitHub Copilot to generate a user-friendly description
+          # Create detailed prompt for GitHub Copilot
+          if [ -z "$PREV_TAG" ]; then
+            FULL_COMMITS=$(git log --pretty=format:"%s%n%b" ${{ steps.get_version.outputs.VERSION }})
+          else
+            FULL_COMMITS=$(git log --pretty=format:"%s%n%b" $PREV_TAG..${{ steps.get_version.outputs.VERSION }})
+          fi
+          
+          PROMPT="Based on these commit messages for version ${{ steps.get_version.outputs.VERSION }}, write a brief, user-friendly paragraph (maximum 4 sentences) explaining what this release does and why it matters to non-technical users. Focus on features, improvements, and fixes from an end-user perspective. Do not mention commit hashes or technical implementation details. Start immediately with the explanation:\n\n$FULL_COMMITS"
+          
+          # Try to use GitHub Copilot to generate the summary
+          AI_SUMMARY=$(echo "$PROMPT" | gh copilot suggest --timeout 30s 2>/dev/null || echo "")
+          
+          # If GitHub Copilot fails, provide a generic message
+          if [ -z "$AI_SUMMARY" ]; then
+            echo "This release includes several improvements and fixes to enhance your experience with noidea. Check the detailed changes below for specifics." >> changelog.md
+          else
+            echo "$AI_SUMMARY" >> changelog.md
+          fi
+          
+          echo "" >> changelog.md
+          echo "## Key Highlights" >> changelog.md
           echo "" >> changelog.md
           echo "Most important changes in this release:" >> changelog.md
           echo "$HIGHLIGHT_COMMITS" >> changelog.md
-          
-          # In the future, we could use GitHub Copilot to generate a more concise summary
-          # by uncommenting and implementing the following:
-          # 
-          # PROMPT="Summarize the following commit messages in 3-5 bullet points, highlighting only the most important changes:"
-          # PROMPT="$PROMPT\n\n$COMMITS_FOR_HIGHLIGHTS"
-          # 
-          # # Call to a hypothetical Copilot CLI tool (not yet available)
-          # # AI_HIGHLIGHTS=$(echo "$PROMPT" | gh copilot suggest --max-tokens 300)
-          # # echo "$AI_HIGHLIGHTS" >> changelog.md
-          
           echo "" >> changelog.md
           echo "## What's Changed" >> changelog.md
           echo "" >> changelog.md
