--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,14 +1,14 @@
 source "https://rubygems.org"
 
-gem "jekyll", "~> 4.3.2"
-gem "just-the-docs", "~> 0.5.0"
+# Comment out the Jekyll gem
+# gem "jekyll", "~> 4.3.2"
+# gem "just-the-docs", "~> 0.5.0"
 
-# If you want to use GitHub Pages, remove the "gem "jekyll"" above and
-# uncomment the line below. To upgrade, run `bundle update github-pages`.
-# gem "github-pages", group: :jekyll_plugins
+# Use github-pages gem for GitHub Pages
+gem "github-pages", "~> 228", group: :jekyll_plugins
+gem "jekyll-remote-theme"
 
 # Plugins
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
-  gem "jekyll-remote-theme"
 end 
