refactor(docs): enhance site structure and dependencies
- Add new layout and index HTML files for improved site structure
- Update Gemfile with new plugins and platform-specific gems
- Modify _config.yml for build settings and exclusions
- Refine index.md for consistency with new layout

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -5,10 +5,20 @@ source "https://rubygems.org"
 # gem "just-the-docs", "~> 0.5.0"
 
 # Use github-pages gem for GitHub Pages
-gem "github-pages", "~> 228", group: :jekyll_plugins
-gem "jekyll-remote-theme"
+gem "github-pages", group: :jekyll_plugins
 
-# Plugins
+# Jekyll plugins
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
-end 
+  gem "jekyll-remote-theme"
+end
+
+# Windows and JRuby fixes
+platforms :mingw, :x64_mingw, :mswin, :jruby do
+  gem "tzinfo", ">= 1", "< 3"
+  gem "tzinfo-data"
+end
+
+# Performance-booster for watching directories on Windows
+gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
+gem "webrick", "~> 1.7" 
