--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,10 +5,11 @@ url: "https://accursedgalaxy.github.io" # use your GitHub username instead
 
 # Build settings
 markdown: kramdown
+highlighter: rouge
 
-# Theme settings
-remote_theme: just-the-docs/just-the-docs
-color_scheme: dark
+# Theme settings - comment out to use our custom theme
+# remote_theme: just-the-docs/just-the-docs
+# color_scheme: dark
 
 # Plugins
 plugins:
