refactor(docs): switch to jekyll-theme-slate
- Update theme from jekyll-theme-cayman to jekyll-theme-slate in _config.yml

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ github_username: AccursedGalaxy
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
