--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ github_username: AccursedGalaxy
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-slate
+theme: jekyll-theme-tactile
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
