refactor(docs): switch to just-the-docs theme

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ github_username: AccursedGalaxy
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-architect
+theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
