refactor(docs): update Jekyll build and theme configuration
- Disable bundler cache and add bundle update in CI workflow
- Update Gemfile to remove version constraints on plugins
- Refactor dark theme SCSS, removing import and updating custom colors
- Switch to just-the-docs theme, adjusting import statements in style.scss

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,7 +32,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2'
-          bundler-cache: true
+          bundler-cache: false
           working-directory: './docs'
       - name: Setup Pages
         id: pages
@@ -40,6 +40,7 @@ jobs:
       - name: Build with Jekyll
         run: |
           cd docs
+          bundle update
           bundle install
           bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
