refactor(docs): switch to jekyll-theme-midnight
- Update _config.yml to use jekyll-theme-midnight instead of just-the-docs
- Remove dark theme SCSS file and related configurations
- Simplify style.scss to import the new theme and add custom page header styling
- Revise navigation structure in _config.yml to use a new format

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,12 +6,10 @@ github_username: AccursedGalaxy
 
 # Build settings
 markdown: kramdown
-# Using remote_theme instead of theme for non-standard themes
-remote_theme: just-the-docs/just-the-docs
+theme: jekyll-theme-midnight
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
-  - jekyll-remote-theme
 
 # Exclude from processing
 exclude:
@@ -22,23 +20,24 @@ exclude:
   - .sass-cache
 
 # Theme settings
-logo: /assets/images/header.png
 show_downloads: true
 
-# Just the Docs specific settings
-aux_links:
-  "noidea on GitHub":
-    - "https://github.com/AccursedGalaxy/noidea"
-search_enabled: true
-
-# Enable dark mode
-color_scheme: dark
-
 # Navigation
-nav_external_links:
-  - title: noidea on GitHub
-    url: https://github.com/AccursedGalaxy/noidea
-    hide_icon: false
+nav:
+  - name: Home
+    url: /
+  - name: Installation
+    url: /installation
+  - name: Usage
+    url: /usage
+  - name: Commands
+    url: /commands
+  - name: Configuration
+    url: /configuration
+  - name: Personalities
+    url: /personalities
+  - name: FAQ
+    url: /faq
 
 # Enable copy code button
 enable_copy_code_button: true
