refactor(docs): enhance site structure and add analytics
- Add default layout and custom head includes for improved site structure
- Implement Google Analytics tracking in head-custom.html
- Update _config.yml with repository details
- Modify image path in index.md for correct asset referencing

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,6 +3,7 @@ description: A Git companion with AI commit messages and sassy feedback
 baseurl: "/noidea" # the subpath of your site, e.g. /blog
 url: "https://accursedgalaxy.github.io" # the base hostname & protocol for your site
 github_username: AccursedGalaxy
+repository: AccursedGalaxy/noidea
 
 # Build settings
 markdown: kramdown
