refactor(docs): update theme and add logo
- Switch from jekyll-theme-midnight to jekyll-theme-cayman
- Add custom logo and update layout structure
- Enhance CSS with new styles for logo, header, navigation, and content
- Include logo.svg file in assets

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@ repository: AccursedGalaxy/noidea
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-midnight
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
@@ -22,6 +22,7 @@ exclude:
 
 # Theme settings
 show_downloads: true
+logo: /assets/images/logo.svg
 
 # Navigation
 nav:
