--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ repo_name: accursedgalaxy/noidea
 theme:
   name: material
   logo: assets/logo.png
+  favicon: assets/logo.png
   icon:
     repo: fontawesome/brands/git-alt
   palette:
@@ -22,8 +23,8 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+
   features:
-    - navigation.instant
     - navigation.instant
     - navigation.instant.progress
     - navigation.instant.preview
@@ -38,10 +39,30 @@ theme:
     - toc.integrate
     - search.suggest
     - search.highlight
+    - content.code.copy
+    - content.code.annotate
+    - content.tooltips
+    - announce.dismiss
 
 plugins:
   - privacy
   - search
+
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.tabbed:
+      alternate_style: true
+  - attr_list
+  - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 copyright: >
   Copyright &copy; 2025 Accursed Galaxy –
@@ -49,6 +70,11 @@ copyright: >
 
 extra:
   generator: false
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/accursedgalaxy/noidea
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/accursedgalaxy
   consent:
     title: Cookie consent
     description: >-
@@ -73,3 +99,6 @@ extra:
           note: >-
             Thanks for your feedback! Help us improve this page by
             using our <a href="..." target="_blank" rel="noopener">feedback form</a>.
+
+extra_css:
+  - stylesheets/extra.css
