refactor(docs): reorganize API key management docs
- Move API key management documentation to new location
- Update mkdocs.yml to reflect new document path

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,7 +79,7 @@ nav:
       - config: user-guide/commands/config.md
     - Features:
       - AI Personalities: user-guide/features/personalities.md
-      - API Key Management: api-key-management.md
+      - API Key Management: user-guide/features/api-key-management.md
       - Git Integration: user-guide/features/git-integration.md
     - Troubleshooting: user-guide/troubleshooting.md
   - Developer Guide:
