--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,12 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
+      - name: Set up golangci-lint
+        uses: golangci/golangci-lint-action@v4
+        with:
+          version: v2.0.2
+          args: --timeout=5m
+
       - name: Run linting
         run: make lint
 
