--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,12 +22,11 @@ jobs:
 
       - name: Install dependencies
         run: go mod download
-
-      - name: Set up golangci-lint
-        uses: golangci/golangci-lint-action@v4
-        with:
-          version: v2.0.2
-          args: --timeout=5m
+        
+      - name: Install golangci-lint manually
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
+          golangci-lint --version
 
       - name: Run linting
         run: make lint
