feat(github): implement GitHub integration and AI-enhanced release notes
- Add GitHub authentication, status check, and logout functionality
- Implement automatic GitHub release creation with post-tag hook
- Introduce AI-powered release notes generation using LLM
- Add setup script and documentation for GitHub integration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,7 @@ nav:
       - AI Personalities: user-guide/features/personalities.md
       - API Key Management: user-guide/features/api-key-management.md
       - Git Integration: user-guide/features/git-integration.md
+      - GitHub Integration: user-guide/features/github-integration.md
     - Troubleshooting: user-guide/troubleshooting.md
   - Developer Guide:
     - Overview: dev-guide/overview.md
